Fixing visuals for tier list on mobile

--- a/taptap_files/main.css
+++ b/taptap_files/main.css
@@ -83,7 +83,6 @@ table {
 
 #main {
     transition: margin-left .5s;
-    padding: 20px;
 }
 
 
